--- a/src/modules/campers/styles/RegistroCampers.module.css
+++ b/src/modules/campers/styles/RegistroCampers.module.css
@@ -64,6 +64,10 @@
     color: white;
 }
 
+.flecha {
+    display: inline-block;
+}
+
 .sub_item {
     padding: 8px 12px 8px 42px;
     color: #64748b;
@@ -124,7 +128,7 @@
 }
 
 .tarjeta_formulario {
-    background-color: #1b1e29;
+    background-color: #273142;
     padding: 32px;
     border-radius: 20px;
     width: 100%;
@@ -159,13 +163,14 @@
 }
 
 .input_campo, .selector_campo, .textarea_campo {
-    background-color: #11131a;
-    border: 1px solid #2d313d;
+    background-color: #323d4e;
+    border: none;
     border-radius: 10px;
     padding: 12px 16px;
     color: white;
     font-size: 0.9rem;
     outline: none;
+    
     transition: border-color 0.2s;
 }
 
@@ -190,8 +195,8 @@
 .circulo_foto {
     width: 100px;
     height: 100px;
-    background-color: #11131a;
-    border: 2px dashed #334155;
+    background-color: white;
+    border: none;
     border-radius: 50%;
     display: flex;
     justify-content: center;
